<?xml version="1.0"?>
<package format="3">
  <name>plan_predictive_cost_map</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="dobayt@todo.todo">dobayt</maintainer>
  <license>Apache-2.0</license>

  <!-- Specify the Python build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>autoware_auto_control_msgs</exec_depend>
  <exec_depend>autoware_auto_planning_msgs</exec_depend>
  <exec_depend>autoware_auto_vehicle_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pacmod3_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>crp_msgs</exec_depend>

  <!-- test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
